[gd_scene load_steps=5 format=2]

[ext_resource path="res://Managers/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Dialog" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Window" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.388235 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_right = 400.0
margin_bottom = 260.0
rect_min_size = Vector2( 800, 260 )
color = Color( 0.219608, 0.160784, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="HBoxContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Face" type="TextureRect" parent="Window/Layout"]
margin_right = 64.0
margin_bottom = 260.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextBox" type="RichTextLabel" parent="Window/Layout"]
margin_left = 68.0
margin_top = 98.0
margin_right = 800.0
margin_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "adsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdad"
text = "adsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdadadsadadadasdad"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VisibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]
